@@ -1,4 +1,4 @@
 /*auto-generated*/
-#define UPDATED_STR "Sep 30, 2020 10:08:15pm"
-#define GIT_COMMIT_HASH "7a2c8d3"
+#define UPDATED_STR "Oct 7, 2020 6:37:08pm"
+#define GIT_COMMIT_HASH "e4ae15d"
 #define COPYRIGHT_END_YEAR "2020"
